--- a/schedule.qmd
+++ b/schedule.qmd
@@ -52,37 +52,49 @@ This page includes schedule for the Fall 2025 semester, along with all the assig
 
 ## Block 2: Data Wrangling and Visualization
 
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| Lesson | Topic                       | BEFORE Class                                                                                                                   | AFTER Class | Graded Events (due dates)      |
-+========+=============================+================================================================================================================================+=============+================================+
-| 8      | Data Basics                 | -   READ:                                                                                                                      | -   GPset 8 |                                |
-|        |                             |                                                                                                                                |             |                                |
-|        |                             |     -   Chapter 1 Hello data from *Introduction to Modern Stats* *(2e)*                                                        |             |                                |
-|        |                             |                                                                                                                                |             |                                |
-|        |                             |     -   Chapter 5 Exploring numerical data from *Introduction to Modern Stats* *(2e)*                                          |             |                                |
-|        |                             |                                                                                                                                |             |                                |
-|        |                             | -   [Reading Guide for Lesson 8](https://notebooklm.google.com/notebook/6f92eaad-f39d-44fa-802a-fc4496e533ea){target="_blank"} |             |                                |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| 9      | GR1                         | Study! Practice!                                                                                                               | Relax!      |                                |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| 10     | Data Basics                 |                                                                                                                                |             |                                |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| 11     | Data Collection and Studies |                                                                                                                                |             | -   Project Group Task #1      |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| 12     | Tidy Data                   |                                                                                                                                |             |                                |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| 13     | Data Wrangling              |                                                                                                                                |             |                                |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| 14     | Numerical Summaries         |                                                                                                                                |             | -   HW 3                       |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| 15     | Data Visualization in 2D    |                                                                                                                                |             |                                |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| 16     | Data Visualization in 1D    |                                                                                                                                |             | -   Project Individual Task #2 |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| 17     | Centrality and Spread       |                                                                                                                                |             |                                |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
-| 18     | GR2                         | Study! Practice!                                                                                                               |             |                                |
-+--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| Lesson | Topic                              | BEFORE Class                                                                                                                   | AFTER Class  | Graded Events (due dates)      |
++========+====================================+================================================================================================================================+==============+================================+
+| 8      | Data Basics                        | -   READ:                                                                                                                      | -   GPset 8  |                                |
+|        |                                    |                                                                                                                                |              |                                |
+|        |                                    |     -   Chapter 1 Hello data from *Introduction to Modern Stats* *(2e)*                                                        |              |                                |
+|        |                                    |                                                                                                                                |              |                                |
+|        |                                    |     -   Chapter 5 Exploring numerical data from *Introduction to Modern Stats* *(2e)*                                          |              |                                |
+|        |                                    |                                                                                                                                |              |                                |
+|        |                                    | -   [Reading Guide for Lesson 8](https://notebooklm.google.com/notebook/6f92eaad-f39d-44fa-802a-fc4496e533ea){target="_blank"} |              |                                |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 9      | GR1                                | Study! Practice!                                                                                                               | Relax!       |                                |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 10     | Data Collection and Studies        | -   READ:                                                                                                                      | -   GPset 10 |                                |
+|        |                                    |                                                                                                                                |              |                                |
+|        |                                    |     -   Chapter 2 Study design from *Introduction to Modern Stats (2e)*                                                        |              |                                |
+|        |                                    |                                                                                                                                |              |                                |
+|        |                                    | -   [Reading Guide for Lesson 10](https://notebooklm.google.com/notebook/725f1277-edc9-4935-800d-01e8d6eb4b25)                 |              |                                |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 11     | Tidy Data                          | -   READ:                                                                                                                      | -   GPset 11 | -   Project Group Task #1      |
+|        |                                    |                                                                                                                                |              |                                |
+|        |                                    |     -   [Chapter 4 Data Importing and Tidy Data](https://moderndive.com/v2/tidy.html) from *Modern Dive*                       |              |                                |
+|        |                                    |                                                                                                                                |              |                                |
+|        |                                    | -   [Reading Guide for Lesson 11](https://notebooklm.google.com/notebook/c15d1e56-d2a1-42f9-9cc3-174b52c7ebe6)                 |              |                                |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 12     | Data Wrangling                     | -   READ:                                                                                                                      | -   GPset12  | -   HW 3                       |
+|        |                                    |                                                                                                                                |              |                                |
+|        |                                    |     -   [Chapter 3 Data Wrangling](https://moderndive.com/v2/wrangling.html) from *Modern Dive*                                |              |                                |
+|        |                                    |                                                                                                                                |              |                                |
+|        |                                    | -   [Reading Guide for Lesson 12](https://notebooklm.google.com/notebook/f3226153-1b7b-4766-af0f-bd472099e7fb)                 |              |                                |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 13     | Numerical Summaries                |                                                                                                                                |              |                                |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 14     | Data Visualization in 2D           |                                                                                                                                |              |                                |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 15     | Data Visualization in 1D           |                                                                                                                                |              | -   Project Individual Task #2 |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 16     | Centrality and Spread              |                                                                                                                                |              | -   HW 4                       |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 17     | Data Provenance / History of Stats |                                                                                                                                |              |                                |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 18     | GR2                                | Study! Practice!                                                                                                               |              |                                |
++--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
 
 ## Block 3: Inference
 
