--- a/schedule.qmd
+++ b/schedule.qmd
@@ -39,7 +39,7 @@ This page includes schedule for the Fall 2025 semester, along with all the assig
 +--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
 | 6      | Named Distributions                  | -   READ: Sections 4.2 Geometric distribution, 4.3 Binomial distribution (through 4.3.1), and 4.5 Poisson distribution, *OpenIntro Statistics*                                                                                   | -   GPset 6 | -   Project Individual Task #1                                                            |
 |        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      | -   [Reading Guide for Lesson 6](https://notebooklm.google.com/notebook/5aeb5c88-de9a-435b-b93f-4d3a6481e74c)                                                                                                                    |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 6](https://notebooklm.google.com/notebook/5aeb5c88-de9a-435b-b93f-4d3a6481e74c){target="_blank"}                                                                                                   |             |                                                                                           |
 +--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
 | 7      | Normal Distribution                  | -   READ:                                                                                                                                                                                                                        | -   GPset 7 | -   HW 2                                                                                  |
 |        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
@@ -47,55 +47,75 @@ This page includes schedule for the Fall 2025 semester, along with all the assig
 |        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
 |        |                                      |     -   [Section 13.2.2 Exponential distribution](https://ds-usafa.github.io/Quarto-Book/Named-Continuous-Distributions.html#exponential-distribution){target="_blank"} from *Computational Probability and Statistics*          |             |                                                                                           |
 |        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      | -   [Reading Guide for Lesson 7](https://notebooklm.google.com/notebook/3e74f22c-0af6-4afe-b5e7-d771b0a01990)                                                                                                                    |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 7](https://notebooklm.google.com/notebook/3e74f22c-0af6-4afe-b5e7-d771b0a01990){target="_blank"}                                                                                                   |             |                                                                                           |
 +--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
 
 ## Block 2: Data Wrangling and Visualization
 
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| Lesson | Topic                              | BEFORE Class                                                                                                                   | AFTER Class  | Graded Events (due dates)      |
-+========+====================================+================================================================================================================================+==============+================================+
-| 8      | Data Basics                        | -   READ:                                                                                                                      | -   GPset 8  |                                |
-|        |                                    |                                                                                                                                |              |                                |
-|        |                                    |     -   Chapter 1 Hello data from *Introduction to Modern Stats* *(2e)*                                                        |              |                                |
-|        |                                    |                                                                                                                                |              |                                |
-|        |                                    |     -   Chapter 5 Exploring numerical data from *Introduction to Modern Stats* *(2e)*                                          |              |                                |
-|        |                                    |                                                                                                                                |              |                                |
-|        |                                    | -   [Reading Guide for Lesson 8](https://notebooklm.google.com/notebook/6f92eaad-f39d-44fa-802a-fc4496e533ea){target="_blank"} |              |                                |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| 9      | GR1                                | Study! Practice!                                                                                                               | Relax!       |                                |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| 10     | Data Collection and Studies        | -   READ:                                                                                                                      | -   GPset 10 |                                |
-|        |                                    |                                                                                                                                |              |                                |
-|        |                                    |     -   Chapter 2 Study design from *Introduction to Modern Stats (2e)*                                                        |              |                                |
-|        |                                    |                                                                                                                                |              |                                |
-|        |                                    | -   [Reading Guide for Lesson 10](https://notebooklm.google.com/notebook/725f1277-edc9-4935-800d-01e8d6eb4b25)                 |              |                                |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| 11     | Tidy Data                          | -   READ:                                                                                                                      | -   GPset 11 | -   Project Group Task #1      |
-|        |                                    |                                                                                                                                |              |                                |
-|        |                                    |     -   [Chapter 4 Data Importing and Tidy Data](https://moderndive.com/v2/tidy.html) from *Modern Dive*                       |              |                                |
-|        |                                    |                                                                                                                                |              |                                |
-|        |                                    | -   [Reading Guide for Lesson 11](https://notebooklm.google.com/notebook/c15d1e56-d2a1-42f9-9cc3-174b52c7ebe6)                 |              |                                |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| 12     | Data Wrangling                     | -   READ:                                                                                                                      | -   GPset12  | -   HW 3                       |
-|        |                                    |                                                                                                                                |              |                                |
-|        |                                    |     -   [Chapter 3 Data Wrangling](https://moderndive.com/v2/wrangling.html) from *Modern Dive*                                |              |                                |
-|        |                                    |                                                                                                                                |              |                                |
-|        |                                    | -   [Reading Guide for Lesson 12](https://notebooklm.google.com/notebook/f3226153-1b7b-4766-af0f-bd472099e7fb)                 |              |                                |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| 13     | Numerical Summaries                |                                                                                                                                |              |                                |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| 14     | Data Visualization in 2D           |                                                                                                                                |              |                                |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| 15     | Data Visualization in 1D           |                                                                                                                                |              | -   Project Individual Task #2 |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| 16     | Centrality and Spread              |                                                                                                                                |              | -   HW 4                       |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| 17     | Data Provenance / History of Stats |                                                                                                                                |              |                                |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
-| 18     | GR2                                | Study! Practice!                                                                                                               |              |                                |
-+--------+------------------------------------+--------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| Lesson | Topic                              | BEFORE Class                                                                                                                                                                                        | AFTER Class  | Graded Events (due dates)      |
++========+====================================+=====================================================================================================================================================================================================+==============+================================+
+| 8      | Data Basics                        | -   READ:                                                                                                                                                                                           | -   GPset 8  |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    |     -   Chapter 1 Hello data from *Introduction to Modern Stats* *(2e)*                                                                                                                             |              |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    |     -   Chapter 5 Exploring numerical data from *Introduction to Modern Stats* *(2e)*                                                                                                               |              |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   [Reading Guide for Lesson 8](https://notebooklm.google.com/notebook/6f92eaad-f39d-44fa-802a-fc4496e533ea){target="_blank"}                                                                      |              |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 9      | GR1                                | Study! Practice!                                                                                                                                                                                    | Relax!       |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 10     | Data Collection and Studies        | -   READ: Chapter 2 Study design from *Introduction to Modern Stats (2e)*                                                                                                                           | -   GPset 10 |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   [Reading Guide for Lesson 10](https://notebooklm.google.com/notebook/725f1277-edc9-4935-800d-01e8d6eb4b25){target="_blank"}                                                                     |              |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 11     | Tidy Data                          | -   READ: [Chapter 4 Data Importing and Tidy Data](https://moderndive.com/v2/tidy.html){target="_blank"} from *Modern Dive*                                                                         | -   GPset 11 | -   Project Group Task #1      |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   [Reading Guide for Lesson 11](https://notebooklm.google.com/notebook/c15d1e56-d2a1-42f9-9cc3-174b52c7ebe6){target="_blank"}                                                                     |              |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 12     | Data Wrangling                     | -   READ: [Chapter 3 Data Wrangling](https://moderndive.com/v2/wrangling.html){target="_blank"} from *Modern Dive*                                                                                  | -   GPset12  | -   HW 3                       |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   [Reading Guide for Lesson 12](https://notebooklm.google.com/notebook/f3226153-1b7b-4766-af0f-bd472099e7fb){target="_blank"}                                                                     |              |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 13     | Numerical Summaries                | -   READ: Chapter 5 Exploring Numerical Data from *Introduction to Modern Statistics* - beginning through Section 5.6                                                                               | -   GPset13  |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   Complete the interactive lab, [Exploratory Data Analysis: 3 - Numerical Summaries](https://openintro.shinyapps.io/ims-02-explore-03/){target="_blank"} from *Introduction to Modern Statistics* |              |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   [Reading Guide for Lesson 13](https://notebooklm.google.com/notebook/71ff8b24-dce4-48e0-8ada-a497edc42929){target="_blank"}                                                                     |              |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 14     | Data Visualization in 2D           | -   READ: [Chapter 2 Data Visualization](https://moderndive.com/v2/viz.html){target="_blank"} from *Modern Dive*                                                                                    | -   GPset14  |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   Reading Guide for Lesson 14                                                                                                                                                                     |              |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 15     | Data Visualization in 1D           | -   READ: Chapter 6 Applications: Explore from *Introduction to Modern Statistics*                                                                                                                  | -   GPset15  | -   Project Individual Task #2 |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   Complete TWO interactive labs from *Introduction to Modern Statistics*:                                                                                                                         |              |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    |     -   [Exploratory Data Analysis: 1 - Exploring categorical data](https://openintro.shinyapps.io/ims-02-explore-01/){target="_blank"}                                                             |              |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    |     -   [Exploratory Data Analysis: 2 - Exploring numerical data](https://openintro.shinyapps.io/ims-02-explore-02/){target="_blank"}                                                               |              |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   Reading Guide for Lesson 15                                                                                                                                                                     |              |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 16     | Centrality and Spread              | -   READ:                                                                                                                                                                                           | -   GPset16  | -   HW 4                       |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   Reading Guide for Lesson 16                                                                                                                                                                     |              |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 17     | Data Provenance / History of Stats | -   READ:                                                                                                                                                                                           | -   GPset17  |                                |
+|        |                                    |                                                                                                                                                                                                     |              |                                |
+|        |                                    | -   Reading Guide for Lesson 17                                                                                                                                                                     |              |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
+| 18     | GR2                                | Study! Practice!                                                                                                                                                                                    | Relax!       |                                |
++--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
 
 ## Block 3: Inference
+
++-----------------+---------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------+---------------------------+
+| Lesson          | Topic                     | BEFORE Class                                                                                                                                   | AFTER Class               | Graded Events (due dates) |
++=================+===========================+================================================================================================================================================+===========================+===========================+
+| 19              | Sampling Framework        | -   READ: [Chapter 7 Sampling from *Modern Dive*](https://moderndive.com/v2/sampling.html) - skip Section 7.3 but read the rest of the chapter | -   GPset 19              |                           |
+|                 |                           |                                                                                                                                                |                           |                           |
+|                 |                           | -   Reading Guide for Lesson 19                                                                                                                |                           |                           |
++-----------------+---------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------+---------------------------+
 
 ## Block 4: Linear Regression
