Updated schedule through Lesson 15

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -85,7 +85,7 @@ This page includes schedule for the Fall 2025 semester, along with all the assig
 +--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
 | 14     | Data Visualization in 2D           | -   READ: [Chapter 2 Data Visualization](https://moderndive.com/v2/viz.html){target="_blank"} from *Modern Dive*                                                                                    | -   GPset14  |                                |
 |        |                                    |                                                                                                                                                                                                     |              |                                |
-|        |                                    | -   Reading Guide for Lesson 14                                                                                                                                                                     |              |                                |
+|        |                                    | -   [Reading Guide for Lesson 14](https://notebooklm.google.com/notebook/1b0e9821-3ed8-4e1c-8394-e6a0160d2cd5){target="_blank"}                                                                     |              |                                |
 +--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
 | 15     | Data Visualization in 1D           | -   READ: Chapter 6 Applications: Explore from *Introduction to Modern Statistics*                                                                                                                  | -   GPset15  | -   Project Individual Task #2 |
 |        |                                    |                                                                                                                                                                                                     |              |                                |
@@ -95,7 +95,7 @@ This page includes schedule for the Fall 2025 semester, along with all the assig
 |        |                                    |                                                                                                                                                                                                     |              |                                |
 |        |                                    |     -   [Exploratory Data Analysis: 2 - Exploring numerical data](https://openintro.shinyapps.io/ims-02-explore-02/){target="_blank"}                                                               |              |                                |
 |        |                                    |                                                                                                                                                                                                     |              |                                |
-|        |                                    | -   Reading Guide for Lesson 15                                                                                                                                                                     |              |                                |
+|        |                                    | -   Reading Guide for Lesson 15 (Gradescope only, no NotebookLM)                                                                                                                                    |              |                                |
 +--------+------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+--------------------------------+
 | 16     | Centrality and Spread              | -   READ:                                                                                                                                                                                           | -   GPset16  | -   HW 4                       |
 |        |                                    |                                                                                                                                                                                                     |              |                                |
